<resources>
    <string name="app_name">Posts</string>
    <string name="string_call">Call</string>
    <string name="icon_phone">icon_phone</string>
    <string name="posts">Posts</string>
    <string name="are_you_sure_you_want_to_delete_this_contact">Are you sure you want to delete this contact?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="my_name">Adrian Perez</string>
    <string name="my_phone">+53 58929076</string>
    <string name="my_email">a7asoft@gmail.com</string>
    <string name="my_address">San Mariano # 59 entre Colón y Nueva, La Habana.</string>
    <string name="apzaldivar">apzaldivar</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="comments">Comments</string>
    <string name="retry">RETRY</string>
    <string name="contacts">Contacts</string>
    <string name="my_info">My Info</string>
</resources>