<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete_this_contact"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/intro_img"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/delete"
            app:lottie_repeatMode="restart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_img"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="11dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/cancel"
                android:textColor="@color/grey_600"
                app:cornerRadius="15dp"
                app:rippleColor="#E57373"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="11dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/delete"
                android:textColor="@color/red_600"
                app:cornerRadius="15dp"
                app:rippleColor="@color/green_100"
                tools:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
